# d3xs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  example.toml  repro-env.toml  sdkconfig.defaults
.github/workflows/: docker-image.yml  firmware.yml  repro-env.yml
bridge/: Cargo.toml
bridge/src/: args.rs  ble.rs  config.rs  main.rs  ws.rs
contrib/: d3xs-bridge.init
firmware/: Cargo.toml  README.md  build.rs  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/src/: chall.rs  crypto.rs  errors.rs  keys.rs  lib.rs  main.rs
protocol/: Cargo.toml
protocol/src/: chall.rs  crypto.rs  errors.rs  ipc.rs  lib.rs  wasm.rs
src/: args.rs  assets.rs  config.rs  index.html  main.rs  script.js  style.css
src/ws/: bridge.rs  mod.rs  user.rs
