[package]
name = "d3xs-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
btleplug = "0.11.1"
clap = { version = "4.4.7", features = ["derive", "env"] }
env_logger = "0.10.0"
futures-util = "0.3.29"
log = "0.4.20"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
uuid = "1.5.0"
