[package]
name = "d3xs-bridge"
version = "0.1.0"
description = "Physical access control (bridge)"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/kpcyrd/d3xs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
btleplug = "0.11.1"
clap = { version = "4.4.7", features = ["derive", "env"] }
d3xs-protocol = { version = "0.1.0", path = "../protocol", features = ["ipc"] }
data-encoding = "2.4.0"
env_logger = "0.10.0"
futures-util = "0.3.29"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "io-std", "io-util", "fs"] }
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-native-roots"] }
toml = "0.8.8"
uuid = "1.5.0"
