[package]
name = "d3xs-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crypto_box = { version = "0.9.1", default-features = false, features = ["salsa20"] }
data-encoding = "2.4.0"
thiserror-no-std = "2.0.2"

[target.'cfg(not(target_os = "espidf"))'.dependencies]
getrandom = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wee_alloc = "0.4"
